check_PROGRAMS = \
	t-get-string \
	t-get-int \
	t-get-uint64 \
	t-get-double \
	t-get-arrayv \
	t-get-boolean \
	t-get-stringlist

t_get_string_SOURCES = t-get-string.c
t_get_int_SOURCES = t-get-int.c
t_get_uint64_SOURCES = t-get-uint64.c
t_get_double_SOURCES = t-get-double.c
t_get_arrayv_SOURCES = t-get-arrayv.c
t_get_boolean_SOURCES = t-get-boolean.c
t_get_stringlist_SOURCES = t-get-stringlist.c

include $(top_srcdir)/tests/Makefile.inc
