check_PROGRAMS = \
	t-has-string \
	t-has-int \
	t-has-uint64 \
	t-has-double \
	t-has-arrayv \
	t-has-boolean \
	t-has-stringlist
	$(top_builddir)/xfconf/libxfconf-$(LIBXFCONF_VERSION_API).la

t_has_string_SOURCES = t-has-string.c
t_has_int_SOURCES = t-has-string.c
t_has_uint64_SOURCES = t-has-uint64.c
t_has_double_SOURCES = t-has-double.c
t_has_arrayv_SOURCES = t-has-arrayv.c
t_has_boolean_SOURCES = t-has-boolean.c
t_has_stringlist_SOURCES = t-has-stringlist.c

include $(top_srcdir)/tests/Makefile.inc
