check_PROGRAMS = \
	t-remove-string \
	t-remove-int \
	t-remove-uint64 \
	t-remove-double \
	t-remove-arrayv \
	t-remove-boolean \
	t-remove-stringlist

t_remove_string_SOURCES = t-remove-string.c
t_remove_int_SOURCES = t-remove-int.c
t_remove_uint64_SOURCES = t-remove-uint64.c
t_remove_double_SOURCES = t-remove-double.c
t_remove_arrayv_SOURCES = t-remove-arrayv.c
t_remove_boolean_SOURCES = t-remove-boolean.c
t_remove_stringlist_SOURCES = t-remove-stringlist.c

include $(top_srcdir)/tests/Makefile.inc
