check_PROGRAMS = \
	t-reset-string \
	t-reset-int \
	t-reset-uint64 \
	t-reset-double \
	t-reset-arrayv \
	t-reset-boolean \
	t-reset-stringlist

t_reset_string_SOURCES = t-reset-string.c
t_reset_int_SOURCES = t-reset-int.c
t_reset_uint64_SOURCES = t-reset-uint64.c
t_reset_double_SOURCES = t-reset-double.c
t_reset_arrayv_SOURCES = t-reset-arrayv.c
t_reset_boolean_SOURCES = t-reset-boolean.c
t_reset_stringlist_SOURCES = t-reset-stringlist.c

include $(top_srcdir)/tests/Makefile.inc
