check_PROGRAMS = \
	t-set-string \
	t-set-int \
	t-set-uint64 \
	t-set-double \
	t-set-arrayv \
	t-set-boolean \
	t-set-stringlist

t_set_string_SOURCES = t-set-string.c
t_set_int_SOURCES = t-set-int.c
t_set_uint64_SOURCES = t-set-uint64.c
t_set_double_SOURCES = t-set-double.c
t_set_arrayv_SOURCES = t-set-arrayv.c
t_set_boolean_SOURCES = t-set-boolean.c
t_set_stringlist_SOURCES = t-set-stringlist.c

include $(top_srcdir)/tests/Makefile.inc
